[project]
name = "berts-dummy-mcp-server"
version = "0.1.0"
description = "A dummy MCP server that can be used to test the MCP protocol."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.9.0",
]

[project.scripts]
mcp-server = "main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["src"]